FOL WORKS WORKS WORKSSSSS (takes time tho)

--- a/A2/code_testing.ipynb
+++ b/A2/code_testing.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (2.2.3)\n",
+      "Requirement already satisfied: pandas in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (2.2.3)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
       "Requirement already satisfied: numpy in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (2.1.2)\n",
       "Requirement already satisfied: matplotlib in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (3.9.2)\n",
       "Requirement already satisfied: plotly in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (5.24.1)\n",
@@ -26,8 +27,7 @@
       "Requirement already satisfied: pillow>=8 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from matplotlib) (11.0.0)\n",
       "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from matplotlib) (3.2.0)\n",
       "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from plotly) (9.0.0)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Requirement already satisfied: six>=1.5 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
      ]
     }
    ],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,14 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_18920\\3706190550.py:32: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_18976\\3706190550.py:32: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  fare_rules = df_fare_rules.set_index('route_id').T.to_dict()\n"
      ]
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -402,19 +402,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize Datalog predicates for reasoning\n",
+    "pyDatalog.create_terms('RouteHasStop, DirectRoute, OptimalRoute, X, Y, Z, R, R1, R2')  \n",
+    "def initialize_datalog():\n",
+    "    \"\"\"\n",
+    "    Initialize Datalog terms and predicates for reasoning about routes and stops.\n",
+    "\n",
+    "    Returns:\n",
+    "        None\n",
+    "    \"\"\"\n",
+    "    pyDatalog.clear()  # Clear previous terms\n",
+    "    print(\"Terms initialized: DirectRoute, RouteHasStop, OptimalRoute\")  # Confirmation print\n",
+    "\n",
+    "    add_route_data(route_to_stops)  # Add route data to Datalog\n",
+    "    \n",
+    "    # Define Datalog predicates\n",
+    "    DirectRoute(R, X, Y) <= (RouteHasStop(R, X) & RouteHasStop(R, Y) & (X != Y))\n",
+    "    \n",
+    "# Adding route data to Datalog\n",
+    "def add_route_data(route_to_stops):\n",
+    "    \"\"\"\n",
+    "    Add the route data to Datalog for reasoning.\n",
+    "\n",
+    "    Args:\n",
+    "        route_to_stops (dict): A dictionary mapping route IDs to lists of stops.\n",
+    "\n",
+    "    Returns:\n",
+    "        None\n",
+    "    \"\"\"\n",
+    "    for route_id, stops in route_to_stops.items():\n",
+    "        for stop_id in stops:\n",
+    "            +RouteHasStop(route_id, stop_id)\n",
+    "\n",
+    "# Function to query direct routes between two stops\n",
+    "def query_direct_routes(start, end):\n",
+    "    \"\"\"\n",
+    "    Query for direct routes between two stops.\n",
+    "\n",
+    "    Args:\n",
+    "        start (int): The ID of the starting stop.\n",
+    "        end (int): The ID of the ending stop.\n",
+    "\n",
+    "    Returns:\n",
+    "        list: A sorted list of route IDs (str) connecting the two stops.\n",
+    "    \"\"\"\n",
+    "    query_result = pyDatalog.ask(\"DirectRoute(R, {}, {})\".format(start, end))\n",
+    "    if query_result is None:\n",
+    "        return []\n",
+    "\n",
+    "    route_ids = [answer[0] for answer in query_result.answers]\n",
+    "\n",
+    "    return sorted(route_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'query_direct_routes' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[70], line 22\u001b[0m\n\u001b[0;32m     18\u001b[0m         actual_output \u001b[38;5;241m=\u001b[39m query_direct_routes(start_stop, end_stop)\n\u001b[0;32m     19\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTest query_direct_routes (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstart_stop\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mend_stop\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m): \u001b[39m\u001b[38;5;124m\"\u001b[39m, \n\u001b[0;32m     20\u001b[0m               \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPass\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m check_output(expected_output, actual_output) \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFail (Expected: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexpected_output\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, Got: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mactual_output\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 22\u001b[0m \u001b[43mtest_query_direct_routes\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[70], line 18\u001b[0m, in \u001b[0;36mtest_query_direct_routes\u001b[1;34m()\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtest_query_direct_routes\u001b[39m():\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m (start_stop, end_stop), expected_output \u001b[38;5;129;01min\u001b[39;00m test_inputs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdirect_route\u001b[39m\u001b[38;5;124m\"\u001b[39m]:\n\u001b[1;32m---> 18\u001b[0m         actual_output \u001b[38;5;241m=\u001b[39m \u001b[43mquery_direct_routes\u001b[49m(start_stop, end_stop)\n\u001b[0;32m     19\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTest query_direct_routes (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstart_stop\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mend_stop\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m): \u001b[39m\u001b[38;5;124m\"\u001b[39m, \n\u001b[0;32m     20\u001b[0m               \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPass\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m check_output(expected_output, actual_output) \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFail (Expected: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexpected_output\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, Got: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mactual_output\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'query_direct_routes' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Terms initialized: DirectRoute, RouteHasStop, OptimalRoute\n",
+      "Test query_direct_routes (2573, 1177):  Pass\n",
+      "Test query_direct_routes (2001, 2005):  Pass\n"
      ]
     }
    ],
@@ -440,8 +496,30 @@
     "        print(f\"Test query_direct_routes ({start_stop}, {end_stop}): \", \n",
     "              \"Pass\" if check_output(expected_output, actual_output) else f\"Fail (Expected: {expected_output}, Got: {actual_output})\")\n",
     "        \n",
-    "test_query_direct_routes()"
+    "initialize_datalog()\n",
+    "test_query_direct_routes()\n",
+    "\n",
+    "\n",
+    "\n",
+    "# print(RouteHasStop(R, 1177) & RouteHasStop(R, 2573))\n",
+    "# DirectRoute(X, Y) <= (RouteHasStop(R, X) & RouteHasStop(R, Y) & (X != Y))\n",
+    "\n",
+    "# print(DirectRoute(2573, 1177))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
