better knowledge base ig - passes tcs till forward chaining tc1

--- a/A2/code_testing.ipynb
+++ b/A2/code_testing.ipynb
@@ -9,8 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (2.2.3)Note: you may need to restart the kernel to use updated packages.\n",
-      "\n",
+      "Requirement already satisfied: pandas in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (2.2.3)\n",
       "Requirement already satisfied: numpy in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (2.1.2)\n",
       "Requirement already satisfied: matplotlib in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (3.9.2)\n",
       "Requirement already satisfied: plotly in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (5.24.1)\n",
@@ -27,7 +26,8 @@
       "Requirement already satisfied: pillow>=8 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from matplotlib) (11.0.0)\n",
       "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from matplotlib) (3.2.0)\n",
       "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from plotly) (9.0.0)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
+      "Requirement already satisfied: six>=1.5 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -99,26 +99,29 @@
     "    \"\"\"\n",
     "    global route_to_stops, trip_to_route, stop_trip_count, fare_rules, merged_fare_df\n",
     "\n",
+    "    # Create trip_id to route_id mapping\n",
     "    for tmp, row in df_trips.iterrows():\n",
     "        trip_to_route[row['trip_id']] = row['route_id']\n",
     "\n",
+    "    # Map route_id to a list of stops in order of their sequence\n",
     "    for tmp, row in df_stop_times.iterrows():\n",
     "        route_id = trip_to_route.get(row['trip_id'])\n",
     "        if route_id:\n",
-    "            if route_id not in route_to_stops:\n",
-    "                route_to_stops[route_id] = []\n",
+    "            # Only add (sequence, stop_id) if it doesn't already exist for the route\n",
     "            route_to_stops[route_id].append((row['stop_sequence'], row['stop_id']))\n",
+    "            # Count trips per stop\n",
     "            stop_trip_count[row['stop_id']] += 1\n",
     "\n",
+    "    # Process each route to retain only unique stop IDs in order\n",
     "    for route_id, stops in route_to_stops.items():\n",
-    "        if all(isinstance(stop, tuple) and len(stop) == 2 for stop in stops):\n",
-    "            unique_stops = sorted(set(stops), key=lambda x: x[0])\n",
-    "            route_to_stops[route_id] = [stop_id for _, stop_id in unique_stops]\n",
-    "        else:\n",
-    "            print(f\"Unexpected structure in stops for route_id {route_id}: {stops}\")\n",
+    "        # Filter and sort based on sequence, then extract stop_ids\n",
+    "        unique_stops = sorted(set(stops), key=lambda x: x[0])\n",
+    "        route_to_stops[route_id] = [stop_id for _, stop_id in unique_stops]\n",
     "\n",
+    "    # Create fare rules for routes\n",
     "    fare_rules = df_fare_rules.set_index('route_id').T.to_dict()\n",
     "\n",
+    "    # Merge fare rules and attributes into a single DataFrame\n",
     "    merged_fare_df = pd.merge(df_fare_rules, df_fare_attributes, on='fare_id', how='inner')"
    ]
   },
@@ -194,26 +197,15 @@
     "              - pair (tuple): A tuple with two stop IDs (stop_1, stop_2).\n",
     "              - route_id (int): The ID of the route connecting the two stops.\n",
     "    \"\"\"\n",
-    "    stop_pair_to_route = defaultdict(list)\n",
+    "    stop_pairs = defaultdict(lambda: defaultdict(int))\n",
     "\n",
     "    for route_id, stops in route_to_stops.items():\n",
     "        for i in range(len(stops) - 1):\n",
-    "            stop_pair = (stops[i], stops[i + 1])\n",
-    "            reverse_pair = (stops[i + 1], stops[i])\n",
-    "            stop_pair_to_route[stop_pair].append(route_id)\n",
-    "            stop_pair_to_route[reverse_pair].append(route_id)\n",
-    "\n",
-    "    result = []\n",
-    "    for stop_pair, routes in stop_pair_to_route.items():\n",
-    "        if len(routes) == 1:\n",
-    "            stop_1, stop_2 = stop_pair\n",
-    "            combined_trip_count = stop_trip_count[stop_1] + stop_trip_count[stop_2]\n",
-    "            result.append((stop_pair, routes[0], combined_trip_count))\n",
-    "\n",
-    "    result_sorted = sorted(result, key=lambda x: x[2], reverse=True)\n",
-    "\n",
-    "    top_5_pairs = [(pair, route_id) for pair, route_id, _ in result_sorted[:5]]\n",
-    "    return top_5_pairs\n",
+    "            pair = (stops[i], stops[i + 1])\n",
+    "            stop_pairs[pair][route_id] += 1\n",
+    "    single_route_pairs = [(pair, route_id) for pair, routes in stop_pairs.items() if len(routes) == 1 for route_id in routes]\n",
+    "    sorted_pairs = sorted(single_route_pairs, key=lambda x: stop_trip_count[x[0][0]] + stop_trip_count[x[0][1]], reverse=True)[:5]\n",
+    "    return sorted_pairs\n",
     "\n",
     "# Function to get merged fare DataFrame\n",
     "# No need to change this function\n",
@@ -308,13 +300,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# REASONING"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -323,7 +308,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_18976\\3706190550.py:32: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_3048\\1676555569.py:34: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  fare_rules = df_fare_rules.set_index('route_id').T.to_dict()\n"
      ]
     }
@@ -336,6 +321,83 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All outputs have been written to the 'outputs' directory.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Create the outputs directory if it doesn't exist\n",
+    "output_dir = os.path.join(os.getcwd(), \"outputs\")\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "\n",
+    "def write_busiest_routes():\n",
+    "    busiest_routes = get_busiest_routes()\n",
+    "    file_path = os.path.join(output_dir, \"busiest_routes.txt\")\n",
+    "    with open(file_path, \"w\") as f:\n",
+    "        f.write(\"Top 5 Busiest Routes (based on trip counts):\\n\")\n",
+    "        for route_id, trip_count in busiest_routes:\n",
+    "            f.write(f\"Route ID: {route_id}, Trip Count: {trip_count}\\n\")\n",
+    "\n",
+    "def write_most_frequent_stops():\n",
+    "    most_frequent_stops = get_most_frequent_stops()\n",
+    "    file_path = os.path.join(output_dir, \"most_frequent_stops.txt\")\n",
+    "    with open(file_path, \"w\") as f:\n",
+    "        f.write(\"Top 5 Stops with the Most Frequent Trips:\\n\")\n",
+    "        for stop_id, trip_count in most_frequent_stops:\n",
+    "            f.write(f\"Stop ID: {stop_id}, Trip Count: {trip_count}\\n\")\n",
+    "\n",
+    "def write_top_5_busiest_stops():\n",
+    "    busiest_stops = get_top_5_busiest_stops()\n",
+    "    file_path = os.path.join(output_dir, \"busiest_stops.txt\")\n",
+    "    with open(file_path, \"w\") as f:\n",
+    "        f.write(\"Top 5 Busiest Stops:\\n\")\n",
+    "        for stop_id, route_count in busiest_stops:\n",
+    "            f.write(f\"Stop ID: {stop_id}, Route Count: {route_count}\\n\")\n",
+    "\n",
+    "def write_stops_with_one_direct_route():\n",
+    "    stops_with_one_route = get_stops_with_one_direct_route()\n",
+    "    file_path = os.path.join(output_dir, \"stops_with_one_direct_route.txt\")\n",
+    "    with open(file_path, \"w\") as f:\n",
+    "        f.write(\"Stops with Only One Direct Route:\\n\")\n",
+    "        for stop_id, route_id in stops_with_one_route:\n",
+    "            f.write(f\"Stop ID: {stop_id}, Route ID: {route_id}\\n\")\n",
+    "\n",
+    "# Run all functions to write outputs\n",
+    "write_busiest_routes()\n",
+    "write_most_frequent_stops()\n",
+    "write_top_5_busiest_stops()\n",
+    "write_stops_with_one_direct_route()\n",
+    "\n",
+    "print(\"All outputs have been written to the 'outputs' directory.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# visualize_stop_route_graph_interactive(route_to_stops)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# REASONING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,10 +480,11 @@
     "    pyDatalog.clear()  # Clear previous terms\n",
     "    print(\"Terms initialized: DirectRoute, RouteHasStop, OptimalRoute\")  # Confirmation print\n",
     "\n",
-    "    add_route_data(route_to_stops)  # Add route data to Datalog\n",
-    "    \n",
     "    # Define Datalog predicates\n",
     "    DirectRoute(R, X, Y) <= (RouteHasStop(R, X) & RouteHasStop(R, Y) & (X != Y))\n",
+    "\n",
+    "    # create_kb()  # Populate the knowledge base\n",
+    "    add_route_data(route_to_stops)  # Add route data to Datalog\n",
     "    \n",
     "# Adding route data to Datalog\n",
     "def add_route_data(route_to_stops):\n",
@@ -461,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -497,29 +560,133 @@
     "              \"Pass\" if check_output(expected_output, actual_output) else f\"Fail (Expected: {expected_output}, Got: {actual_output})\")\n",
     "        \n",
     "initialize_datalog()\n",
-    "test_query_direct_routes()\n",
-    "\n",
-    "\n",
-    "\n",
-    "# print(RouteHasStop(R, 1177) & RouteHasStop(R, 2573))\n",
-    "# DirectRoute(X, Y) <= (RouteHasStop(R, X) & RouteHasStop(R, Y) & (X != Y))\n",
-    "\n",
-    "# print(DirectRoute(2573, 1177))"
+    "test_query_direct_routes()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Planning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pyDatalog.create_terms('RouteHasStop, DirectRoute, CanReachWithTransfer, X, Y, Z, R, R1, R2, Stops')\n",
+    "\n",
+    "# Sample Data - You would replace this with your actual data\n",
+    "# Updated route_to_stops with additional data for testing\n",
+    "route_to_stops = {\n",
+    "    10153: [22540, 4686, 2573],\n",
+    "    1407: [4686, 2573],\n",
+    "    294: [951, 300, 340],\n",
+    "    712: [300, 340],\n",
+    "    1211: [951, 300, 340],        # Add additional routes for new test cases\n",
+    "    10453: [951, 300, 340],\n",
+    "    387: [951, 300, 340],\n",
+    "    49: [951, 300, 340],\n",
+    "    1571: [951, 300, 340],\n",
+    "    37: [951, 300, 340],\n",
+    "    1038: [951, 300, 340],\n",
+    "    10433: [951, 300, 340],\n",
+    "    121: [951, 300, 340]\n",
+    "}\n",
+    "\n",
+    "# Add the data to PyDatalog globally\n",
+    "for route, stops in route_to_stops.items():\n",
+    "    for stop in stops:\n",
+    "        +RouteHasStop(route, stop)\n",
+    "\n",
+    "# Define a direct route rule for stops on the same route\n",
+    "DirectRoute(X, Y, R) <= (RouteHasStop(R, X) & RouteHasStop(R, Y) & (X != Y))\n",
+    "\n",
+    "# Define a rule for reaching an endpoint with a transfer at a via stop\n",
+    "CanReachWithTransfer(X, Y, Z, R1, R2) <= (DirectRoute(X, Z, R1) & DirectRoute(Z, Y, R2) & (R1 != R2))\n",
+    "\n",
+    "# Forward chaining for optimal route planning\n",
+    "def forward_chaining(start_stop_id, end_stop_id, stop_id_to_include, max_transfers):\n",
+    "    \"\"\"\n",
+    "    Perform forward chaining to find optimal routes considering transfers.\n",
+    "\n",
+    "    Args:\n",
+    "        start_stop_id (int): The starting stop ID.\n",
+    "        end_stop_id (int): The ending stop ID.\n",
+    "        stop_id_to_include (int): The stop ID where a transfer occurs.\n",
+    "        max_transfers (int): The maximum number of transfers allowed.\n",
+    "\n",
+    "    Returns:\n",
+    "        list: A list of unique paths (list of tuples) that satisfy the criteria, where each tuple contains:\n",
+    "              - route_id (int): The ID of the route.\n",
+    "              - stop_id (int): The ID of the stop.\n",
+    "    \"\"\"\n",
+    "    paths = []\n",
+    "\n",
+    "    # Find possible paths with a transfer at the via stop\n",
+    "    valid_paths = pyDatalog.ask(f\"CanReachWithTransfer({start_stop_id}, {end_stop_id}, {stop_id_to_include}, R1, R2)\")\n",
+    "\n",
+    "    # Process results\n",
+    "    if valid_paths is not None:\n",
+    "        for answer in valid_paths.answers:\n",
+    "            route1, route2 = answer[0], answer[1]\n",
+    "            paths.append((route1, stop_id_to_include, route2))\n",
+    "\n",
+    "    return paths"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test forward_chaining (22540, 2573, 4686, 1):  Pass\n",
+      "Test forward_chaining (951, 340, 300, 1):  Fail (Expected: [(1211, 300, 712), (10453, 300, 712), (387, 300, 712), (49, 300, 712), (1571, 300, 712), (37, 300, 712), (1038, 300, 712), (10433, 300, 712), (121, 300, 712)], Got: [(1571, 300, 387), (1571, 300, 49), (1571, 300, 294), (1571, 300, 712), (1571, 300, 1038), (1571, 300, 10453), (1571, 300, 121), (1571, 300, 1211), (1571, 300, 10433), (1571, 300, 37), (10453, 300, 37), (10453, 300, 10433), (10453, 300, 1571), (10453, 300, 1211), (10453, 300, 121), (10453, 300, 1038), (10453, 300, 712), (10453, 300, 294), (10453, 300, 49), (10453, 300, 387), (294, 300, 37), (294, 300, 10433), (294, 300, 1571), (294, 300, 1211), (294, 300, 121), (294, 300, 10453), (294, 300, 1038), (294, 300, 712), (294, 300, 49), (294, 300, 387), (121, 300, 37), (121, 300, 10433), (121, 300, 1571), (121, 300, 1211), (121, 300, 10453), (121, 300, 1038), (121, 300, 712), (121, 300, 294), (121, 300, 49), (121, 300, 387), (49, 300, 37), (49, 300, 10433), (49, 300, 1571), (49, 300, 1211), (49, 300, 121), (49, 300, 10453), (49, 300, 1038), (49, 300, 712), (49, 300, 294), (49, 300, 387), (37, 300, 10433), (37, 300, 1571), (37, 300, 1211), (37, 300, 121), (37, 300, 10453), (37, 300, 1038), (37, 300, 712), (37, 300, 294), (37, 300, 49), (37, 300, 387), (1211, 300, 37), (1211, 300, 10433), (1211, 300, 1571), (1211, 300, 121), (1211, 300, 10453), (1211, 300, 1038), (1211, 300, 712), (1211, 300, 294), (1211, 300, 49), (1211, 300, 387), (10433, 300, 37), (10433, 300, 1571), (10433, 300, 1211), (10433, 300, 121), (10433, 300, 10453), (10433, 300, 1038), (10433, 300, 712), (10433, 300, 294), (10433, 300, 49), (10433, 300, 387), (1038, 300, 37), (1038, 300, 10433), (1038, 300, 1571), (1038, 300, 1211), (1038, 300, 121), (1038, 300, 10453), (1038, 300, 712), (1038, 300, 294), (1038, 300, 49), (1038, 300, 387), (387, 300, 37), (387, 300, 10433), (387, 300, 1571), (387, 300, 1211), (387, 300, 121), (387, 300, 10453), (387, 300, 1038), (387, 300, 712), (387, 300, 294), (387, 300, 49)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Updated test inputs\n",
+    "test_inputs = {\n",
+    "    \"forward_chaining\": [\n",
+    "        ((22540, 2573, 4686, 1), [(10153, 4686, 1407)]),\n",
+    "        ((951, 340, 300, 1), [\n",
+    "            (1211, 300, 712), \n",
+    "            (10453, 300, 712), \n",
+    "            (387, 300, 712), \n",
+    "            (49, 300, 712), \n",
+    "            (1571, 300, 712), \n",
+    "            (37, 300, 712), \n",
+    "            (1038, 300, 712), \n",
+    "            (10433, 300, 712), \n",
+    "            (121, 300, 712)\n",
+    "        ])\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "# Check output function\n",
+    "def check_output(expected, actual):\n",
+    "    \"\"\"Function to compare expected and actual outputs.\"\"\"\n",
+    "    if isinstance(expected, list) and isinstance(actual, list):\n",
+    "        return sorted(expected) == sorted(actual)  # Ensures order-independent comparison\n",
+    "    return expected == actual  # For non-list types\n",
+    "\n",
+    "# Test function for forward chaining\n",
+    "def test_forward_chaining():\n",
+    "    for (start_stop, end_stop, via_stop, max_transfers), expected_output in test_inputs[\"forward_chaining\"]:\n",
+    "        actual_output = forward_chaining(start_stop, end_stop, via_stop, max_transfers)\n",
+    "        print(f\"Test forward_chaining ({start_stop}, {end_stop}, {via_stop}, {max_transfers}): \", \n",
+    "              \"Pass\" if check_output(expected_output, actual_output) else f\"Fail (Expected: {expected_output}, Got: {actual_output})\")\n",
+    "\n",
+    "# Run tests\n",
+    "test_forward_chaining()"
+   ]
   }
  ],
  "metadata": {
