forward chaining works with optimalroute

--- a/A2/code_testing.ipynb
+++ b/A2/code_testing.ipynb
@@ -308,7 +308,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_3048\\1676555569.py:34: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_21176\\1676555569.py:34: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  fare_rules = df_fare_rules.set_index('route_id').T.to_dict()\n"
      ]
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -572,41 +572,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test forward_chaining (22540, 2573, 4686, 1):  Pass\n",
+      "Test forward_chaining (951, 340, 300, 1):  Pass\n"
+     ]
+    }
+   ],
    "source": [
-    "pyDatalog.create_terms('RouteHasStop, DirectRoute, CanReachWithTransfer, X, Y, Z, R, R1, R2, Stops')\n",
-    "\n",
-    "# Sample Data - You would replace this with your actual data\n",
-    "# Updated route_to_stops with additional data for testing\n",
-    "route_to_stops = {\n",
-    "    10153: [22540, 4686, 2573],\n",
-    "    1407: [4686, 2573],\n",
-    "    294: [951, 300, 340],\n",
-    "    712: [300, 340],\n",
-    "    1211: [951, 300, 340],        # Add additional routes for new test cases\n",
-    "    10453: [951, 300, 340],\n",
-    "    387: [951, 300, 340],\n",
-    "    49: [951, 300, 340],\n",
-    "    1571: [951, 300, 340],\n",
-    "    37: [951, 300, 340],\n",
-    "    1038: [951, 300, 340],\n",
-    "    10433: [951, 300, 340],\n",
-    "    121: [951, 300, 340]\n",
-    "}\n",
-    "\n",
-    "# Add the data to PyDatalog globally\n",
-    "for route, stops in route_to_stops.items():\n",
-    "    for stop in stops:\n",
-    "        +RouteHasStop(route, stop)\n",
-    "\n",
-    "# Define a direct route rule for stops on the same route\n",
-    "DirectRoute(X, Y, R) <= (RouteHasStop(R, X) & RouteHasStop(R, Y) & (X != Y))\n",
-    "\n",
-    "# Define a rule for reaching an endpoint with a transfer at a via stop\n",
-    "CanReachWithTransfer(X, Y, Z, R1, R2) <= (DirectRoute(X, Z, R1) & DirectRoute(Z, Y, R2) & (R1 != R2))\n",
-    "\n",
+    "# initialize_datalog()\n",
     "# Forward chaining for optimal route planning\n",
     "def forward_chaining(start_stop_id, end_stop_id, stop_id_to_include, max_transfers):\n",
     "    \"\"\"\n",
@@ -620,73 +599,62 @@
     "\n",
     "    Returns:\n",
     "        list: A list of unique paths (list of tuples) that satisfy the criteria, where each tuple contains:\n",
-    "              - route_id (int): The ID of the route.\n",
-    "              - stop_id (int): The ID of the stop.\n",
+    "              - route_id1 (int): The ID of the first route.\n",
+    "              - stop_id (int): The ID of the intermediate stop.\n",
+    "              - route_id2 (int): The ID of the second route.\n",
     "    \"\"\"\n",
     "    paths = []\n",
     "\n",
-    "    # Find possible paths with a transfer at the via stop\n",
-    "    valid_paths = pyDatalog.ask(f\"CanReachWithTransfer({start_stop_id}, {end_stop_id}, {stop_id_to_include}, R1, R2)\")\n",
+    "    # Define OptimalRoute using DirectRoute with start, intermediate (transfer), and end stops\n",
+    "    OptimalRoute(R1, R2, stop_id_to_include) <= (\n",
+    "        DirectRoute(R1, start_stop_id, stop_id_to_include) & \n",
+    "        DirectRoute(R2, stop_id_to_include, end_stop_id)\n",
+    "    )\n",
     "\n",
-    "    # Process results\n",
+    "    # Query for optimal routes that satisfy the transfer condition\n",
+    "    valid_paths = pyDatalog.ask(f\"OptimalRoute(R1, R2, {stop_id_to_include})\")\n",
+    "\n",
+    "    # Process the results if valid paths are found\n",
     "    if valid_paths is not None:\n",
     "        for answer in valid_paths.answers:\n",
     "            route1, route2 = answer[0], answer[1]\n",
     "            paths.append((route1, stop_id_to_include, route2))\n",
     "\n",
-    "    return paths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test forward_chaining (22540, 2573, 4686, 1):  Pass\n",
-      "Test forward_chaining (951, 340, 300, 1):  Fail (Expected: [(1211, 300, 712), (10453, 300, 712), (387, 300, 712), (49, 300, 712), (1571, 300, 712), (37, 300, 712), (1038, 300, 712), (10433, 300, 712), (121, 300, 712)], Got: [(1571, 300, 387), (1571, 300, 49), (1571, 300, 294), (1571, 300, 712), (1571, 300, 1038), (1571, 300, 10453), (1571, 300, 121), (1571, 300, 1211), (1571, 300, 10433), (1571, 300, 37), (10453, 300, 37), (10453, 300, 10433), (10453, 300, 1571), (10453, 300, 1211), (10453, 300, 121), (10453, 300, 1038), (10453, 300, 712), (10453, 300, 294), (10453, 300, 49), (10453, 300, 387), (294, 300, 37), (294, 300, 10433), (294, 300, 1571), (294, 300, 1211), (294, 300, 121), (294, 300, 10453), (294, 300, 1038), (294, 300, 712), (294, 300, 49), (294, 300, 387), (121, 300, 37), (121, 300, 10433), (121, 300, 1571), (121, 300, 1211), (121, 300, 10453), (121, 300, 1038), (121, 300, 712), (121, 300, 294), (121, 300, 49), (121, 300, 387), (49, 300, 37), (49, 300, 10433), (49, 300, 1571), (49, 300, 1211), (49, 300, 121), (49, 300, 10453), (49, 300, 1038), (49, 300, 712), (49, 300, 294), (49, 300, 387), (37, 300, 10433), (37, 300, 1571), (37, 300, 1211), (37, 300, 121), (37, 300, 10453), (37, 300, 1038), (37, 300, 712), (37, 300, 294), (37, 300, 49), (37, 300, 387), (1211, 300, 37), (1211, 300, 10433), (1211, 300, 1571), (1211, 300, 121), (1211, 300, 10453), (1211, 300, 1038), (1211, 300, 712), (1211, 300, 294), (1211, 300, 49), (1211, 300, 387), (10433, 300, 37), (10433, 300, 1571), (10433, 300, 1211), (10433, 300, 121), (10433, 300, 10453), (10433, 300, 1038), (10433, 300, 712), (10433, 300, 294), (10433, 300, 49), (10433, 300, 387), (1038, 300, 37), (1038, 300, 10433), (1038, 300, 1571), (1038, 300, 1211), (1038, 300, 121), (1038, 300, 10453), (1038, 300, 712), (1038, 300, 294), (1038, 300, 49), (1038, 300, 387), (387, 300, 37), (387, 300, 10433), (387, 300, 1571), (387, 300, 1211), (387, 300, 121), (387, 300, 10453), (387, 300, 1038), (387, 300, 712), (387, 300, 294), (387, 300, 49)])\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Updated test inputs\n",
+    "    return paths\n",
+    "\n",
+    "\n",
+    "test = [ ((22540, 2573, 4686, 1), [(10153, 4686, 1407)]), ((951, 340, 300, 1), [(294, 300, 712), (10453, 300, 712), (1211, 300, 712), (1158, 300, 712), (37, 300, 712), (1571, 300, 712), (49, 300, 712), (387, 300, 712), (1206, 300, 712), (1038, 300, 712), (10433, 300, 712), (121, 300, 712)])]\n",
+    "# print('out : ',forward_chaining(951, 340, 300, 1))\n",
     "test_inputs = {\n",
     "    \"forward_chaining\": [\n",
     "        ((22540, 2573, 4686, 1), [(10153, 4686, 1407)]),\n",
-    "        ((951, 340, 300, 1), [\n",
-    "            (1211, 300, 712), \n",
-    "            (10453, 300, 712), \n",
-    "            (387, 300, 712), \n",
-    "            (49, 300, 712), \n",
-    "            (1571, 300, 712), \n",
-    "            (37, 300, 712), \n",
-    "            (1038, 300, 712), \n",
-    "            (10433, 300, 712), \n",
-    "            (121, 300, 712)\n",
-    "        ])\n",
+    "        ((951, 340, 300, 1), [(1211, 300, 712), (10453, 300, 712), (387, 300, 712), (49, 300, 712), \n",
+    "                              (1571, 300, 712), (37, 300, 712), (1038, 300, 712), (10433, 300, 712), \n",
+    "                              (121, 300, 712)])\n",
     "    ]\n",
     "}\n",
     "\n",
-    "# Check output function\n",
     "def check_output(expected, actual):\n",
     "    \"\"\"Function to compare expected and actual outputs.\"\"\"\n",
     "    if isinstance(expected, list) and isinstance(actual, list):\n",
     "        return sorted(expected) == sorted(actual)  # Ensures order-independent comparison\n",
     "    return expected == actual  # For non-list types\n",
     "\n",
-    "# Test function for forward chaining\n",
     "def test_forward_chaining():\n",
     "    for (start_stop, end_stop, via_stop, max_transfers), expected_output in test_inputs[\"forward_chaining\"]:\n",
     "        actual_output = forward_chaining(start_stop, end_stop, via_stop, max_transfers)\n",
     "        print(f\"Test forward_chaining ({start_stop}, {end_stop}, {via_stop}, {max_transfers}): \", \n",
-    "              \"Pass\" if check_output(expected_output, actual_output) else f\"Fail (Expected: {expected_output}, Got: {actual_output})\")\n",
+    "              \"Pass\" if check_output(expected_output, actual_output) else f\"Fail (\\n\\n\\nExpected: {expected_output},\\n\\n Got: {actual_output})\")\n",
     "\n",
-    "# Run tests\n",
     "test_forward_chaining()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
